--- a/test/dialog.html
+++ b/test/dialog.html
@@ -23,6 +23,25 @@
 
 <script src="../dist/jDialog.js"></script>
 <script>
+
+    var msg1 = '<div>' +
+            'Toast 是一个 View 视图,快速的为用户显示少量的信息。 ' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
+            '不影响用户的输入等操作,主要用于 一些帮助 /...' +
+            '</div>';
+
+
     var handlerMapping = {
         test1: function () {
             jDialog('jDialog("Some messages")');
@@ -40,22 +59,7 @@
             });
         },
         test4: function () {
-            jDialog('<div>' +
-            'Toast 是一个 View 视图,快速的为用户显示少量的信息。 ' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            'Toast 在应用程序上浮动显示信息给用户,它永远不会获得焦点,' +
-            '不影响用户的输入等操作,主要用于 一些帮助 /...' +
-            '</div>');
+            jDialog(msg1);
         }
     }
 
