--- a/test/dialog.html
+++ b/test/dialog.html
@@ -55,7 +55,7 @@
         test3: function () {
             jDialog({
                 modal: false,
-                msg: '一个不带模式窗口的dialog'
+                content: '一个不带模式窗口的dialog'
             });
         },
         test4: function () {
